fix: resolve all structural issues and security gaps identified in review
- Remove dead TimeSlot entity and TimeSlotRepository (no controller existed)
- Remove non-existent /services/*/timeslots permit rule from SecurityConfig
- Wire CORS allowed-origins from app.cors.allowed-origins property instead of hardcoding localhost
- Add ownership check to DELETE /appointments/{id}: CUSTOMER must own the appointment; ADMIN/SUPER_ADMIN bypass; throws 403 ForbiddenException otherwise
- Add ForbiddenException + GlobalExceptionHandler handler for 403 responses
- Extract BusinessController fat-controller logic into BusinessService (repositories no longer injected directly into controller)
- Add JOIN FETCH queries to AppointmentRepository (findByIdFetching, findByCustomerIdFetching, findByBusinessIdFetching, findAllFetching) to eliminate N+1 lazy-load issues in AppointmentService
- Fix N+1 in AdminService.getAdminUsers: load all businesses in one query, build email→name map instead of per-user DB calls
- Fix N+1 in AdminService.getCustomersWithAppointments: load all appointments via findAllFetching, group by customerId instead of per-customer queries
- Fix AdminService.deleteCustomer: explicitly delete customer appointments before deleting customer record, removing implicit cascade dependency
- Reuse BusinessService.getServicesForBusiness in AdminService.getServicesForUser to eliminate duplicate service-response mapping